<resources>
    <string name="app_name">Fly Far Ladies</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome !</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here!</string>
    <string name="we_are_here_for_your_dream">We are here for your dream!</string>
    <string name="full_name">Full Name</string>
    <string name="login_here">Login Here!</string>
    <string name="already_have_account">Already have account?</string>
    <string name="my_profile">My Profile</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="security">Security</string>
    <string name="change_password">Change Password</string>
    <string name="all_your_handpicked">All your handpicked</string>
    <string name="favourites">Favourites</string>
    <string name="all_your_given_reviews">All your given reviews</string>
    <string name="my_reviews">My Reviews</string>
    <string name="all_offers_amp_deals"><![CDATA[All Offers & Deals]]></string>
    <string name="my_offers">My Offers</string>
    <string name="log_out">Log Out</string>
    <string name="about_app">About app</string>
    <string name="version_1_00">Version : 1.00</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_policy_amp_terms_of_use"><![CDATA[Privacy Policy & Terms of use]]></string>
    <string name="questions_amp_answere"><![CDATA[Questions & Answere]]></string>
    <string name="faq">FAQ</string>
    <string name="settings">Settings</string>
    <string name="get_updated">Get updated</string>
    <string name="help">Help</string>
    <string name="need_help">Need help</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="cross">X</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="set_new_passeword">Set New Passeword</string>
    <string name="phone">Phone</string>
    <string name="thank_you">Thank you !</string>
    <string name="dear_user_your_booking_is_confirmed">Dear User, Your booking is confirmed</string>
    <string name="just_sit_back">Just sit back</string>
    <string name="no_need_to_call_us_for_reconfirm_ticket">No need to call us for reconfirm ticket</string>
    <string name="your_ticket_attached_with_email_check_mailbox">Your ticket attached with email. Check mailbox!</string>
    <string name="view_details">View Details</string>
    <string name="burj_al_arab">Burj Al Arab</string>
    <string name="sea_view_premium_lifestyle">Sea view,Premium lifestyle</string>
    <string name="_85000_bdt">85000 BDT</string>
    <string name="_4_nights">4 Nights</string>
    <string name="booking_details">Booking Details</string>
    <string name="booking_id_3137556698">Booking ID: 3137556698</string>
    <string name="give_review"><![CDATA[Give Review >]]></string>
    <string name="royal_tulip_cox_s_bazar">Royal Tulip Cox\'s Bazar</string>
    <string name="cox_s_bazar_chittagong">Cox\'s Bazar, Chittagong</string>
    <string name="inclusions_accomodation">Inclusions: Accomodation</string>
    <string name="check_in_10_00_am">Check in 10:00 AM</string>
    <string name="check_out_10_00_am">Check Out 10:00 AM</string>
    <string name="_25_oct_21">25 Oct 21</string>
    <string name="_23_oct_21">23 OCT 21</string>
    <string name="room_type">Room Type</string>
    <string name="rooms">ROOMS</string>
    <string name="ac_room">AC ROOM</string>
    <string name="_1_room">1 Room</string>
    <string name="amount_paid">Amount(Paid)</string>
    <string name="call_hotel">Call Hotel</string>
    <string name="_5000_bdt">5000 BDT</string>
    <string name="propular_packages">Propular Packages</string>
    <string name="view_all">View all</string>

    <string name="signin">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="minimum_password">Password Must be More than 6</string>
    <string name="auth_failed">Login Failed</string>
    <string name="discover">Discover</string>
    <string name="domestic">Domestic</string>
    <string name="explore">Explore</string>
    <string name="packages">Packages</string>
    <string name="popular">Popular</string>
    <string name="mountain_in_india">Mountain in India</string>
    <string name="a_quick_journey">A quick journey</string>
    <string name="view_trip_details">View Trip Details</string>
    <string name="budget_packages">Budget Packages</string>
    <string name="flight">FLIGHT</string>
    <string name="private_villa">PRIVATE VILLA</string>
    <string name="hotels">Hotels</string>
    <string name="resorts">RESORT</string>
    <string name="visa">VISA</string>
    <string name="rent_a_car">RENT A CAR</string>
    <string name="my_trips">My Trips</string>
    <string name="stayed">* Stayed</string>
    <string name="_21st_feb_28_feb">21st Feb - 28 Feb</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="diparture_from">Diparture From</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="book_now">Book Now</string>
    <string name="xyz">xyz</string>
    <string name="my_booked_packages">My Booked Packages</string>
    <string name="packs">Person :</string>
    <string name="score_4_5">Score : 4.5</string>
    <string name="flights">Flights</string>
    <string name="transfer">Transfer</string>
    <string name="site_view">Site View</string>
    <string name="overview">Overview</string>
    <string name="about_burj_al_arab">About Burj AL Arab</string>
    <string name="details">Details</string>
    <string name="countinue_booking">Countinue Booking</string>
    <string name="meals">Meals</string>
</resources>