<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Dashboard.EditProfileActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/loginform"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/editprofiletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/cross"
            android:textColor="@color/primary"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/imagelayout"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:paddingStart="0dp"
                android:src="@drawable/avatar"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"
                android:text="@string/change"
                android:textColor="@color/primary"
                android:textSize="25sp" />


        </LinearLayout>


        <TextView
            android:id="@+id/abouttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imagelayout"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editTextTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/abouttext"
            android:background="@drawable/editprofileborderbottom"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/black"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextName"
            android:layout_marginTop="30dp"
            android:background="@drawable/editprofileborderbottom"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/black"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextEmailAddress"
            android:layout_marginTop="30dp"
            android:background="@drawable/editprofileborderbottom"
            android:hint="@string/address"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/black"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editNumberMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextAddress"
            android:layout_marginTop="30dp"
            android:background="@drawable/editprofileborderbottom"
            android:hint="@string/phone"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/black"
            tools:ignore="RtlSymmetry,TextFields" />


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editNumberMobile"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="OnClick" />


    </RelativeLayout>





</RelativeLayout>